--- a/planeteers-api/build.gradle
+++ b/planeteers-api/build.gradle
@@ -20,6 +20,7 @@ repositories {
 dependencies {
 	implementation("org.springframework.security:spring-security-crypto:5.6.4")
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.mysql:mysql-connector-j'
