--- a/planeteers-api/src/main/resources/application.properties
+++ b/planeteers-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=planeteers-api
 
-spring.datasource.url=jdbc:mysql://localhost:3306/planeteers
+spring.datasource.url=jdbc:mysql://localhost:3306/planeteers-api
 spring.datasource.username=planeteers
 spring.datasource.password=Trustno-1
 
