--- a/planeteers-api/src/main/resources/application.properties
+++ b/planeteers-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=planeteers-api
 
-spring.datasource.url=jdbc:mysql://localhost:3306/planeteers-api
+spring.datasource.url=jdbc:mysql://localhost:3306/planeteers
 spring.datasource.username=planeteers
 spring.datasource.password=Trustno-1
 
@@ -16,3 +16,4 @@ spring.jpa.hibernate.ddl-auto = update
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
