--- a/planeteers-ui/package.json
+++ b/planeteers-ui/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.3",
+    "js-cookie": "^3.0.5",
+    "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1"
